<resources>
    <string name="app_name">SParkit</string>


    <string-array name="states">
        <item>AL</item>
        <item>AR</item>
        <item>AZ</item>
        <item>CA</item>
        <item>CO</item>
        <item>CT</item>
        <item>DE</item>
        <item>DC</item>
        <item>FL</item>
        <item>GA</item>
        <item>HI</item>
        <item>ID</item>
        <item>IL</item>
        <item>IN</item>
        <item>IA</item>
        <item>KS</item>
        <item>KY</item>
        <item>LA</item>
        <item>ME</item>
        <item>MD</item>
        <item>MA</item>
        <item>MI</item>
        <item>MN</item>
        <item>MS</item>
        <item>MO</item>
        <item>MT</item>
        <item>NE</item>
        <item>NV</item>
        <item>NH</item>
        <item>NJ</item>
        <item>NM</item>
        <item>NY</item>
        <item>NC</item>
        <item>ND</item>
        <item>OH</item>
        <item>OK</item>
        <item>OR</item>
        <item>PA</item>
        <item>RI</item>
        <item>SC</item>
        <item>SD</item>
        <item>TN</item>
        <item>TX</item>
        <item>UT</item>
        <item>VT</item>
        <item>VA</item>
        <item>WA</item>
        <item>WV</item>
        <item>WI</item>
        <item>WY</item>
    </string-array>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_fname">First Name</string>
    <string name="prompt_lname">Last Name</string>
    <string name="register">Register</string>
    <string name="action_sign_in">Login</string>
    <string name="action_sign_up">Sign Up</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="prompt_title">Title</string>
    <string name="prompt_LoginEmail">Log-in Email</string>
    <string name="prompt_StAddress">Street Address</string>
    <string name="prompt_City">City</string>
    <string name="prompt_State">State</string>
    <string name="prompt_ZIPcode">Zip Code</string>
    <string name="prompt_Description">Description</string>
    <string name="CreatePosting_button">Create</string>
    <string name="post_button">Post</string>
    <string name="logout">Logout</string>
    <string name="search_button">Search</string>
    <string name="logout_button">Logout</string>
    <string name="MainMenu_button">Main Menu</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_maps_activity_db">MapsActivityDB</string>
    <string name="google_app_id">sonorous-dragon-127019</string>
    <string name="goHome_button">Home</string>
    <string name="prompt_password2">Confirm Password</string>
    <string name="date_selected"></string>;





</resources>
