<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1"
    tools:context="com.sparkit.sparkit.MainPage">

    <Button
        android:layout_width="78dp"
        android:layout_height="40dp"
        android:text="@string/logout"
        android:id="@+id/logout_button"
        android:layout_marginTop = "2dp"
        android:layout_marginBottom = "10dp"
        android:onClick="onLogout"
        android:layout_weight="0.01"
        android:layout_gravity="left" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/welcome_message"
        android:textAlignment = "center"
        android:textSize="30sp"
        android:fontFamily="sans-serif-light"
        android:id="@+id/textView" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent">

        <Button
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:text="@string/post_button"
            android:id="@+id/post_button"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.07"
            android:onClick="onPost" />

        <Button
            android:layout_width="101dp"
            android:layout_height="wrap_content"
            android:text="@string/search_button"
            android:id="@+id/search_button"
            android:layout_gravity="center_horizontal"
            android:onClick="onSearch"
            android:layout_weight="0.04" />
    </LinearLayout>

</LinearLayout>